--- a/Lab4/1/Makefile
+++ b/Lab4/1/Makefile
@@ -1,5 +1,5 @@
-obj-m = bai1.o
+KDIR := /lib/modules/`uname -r`/build
 all:
-	make -C /lib/modules/$(shell uname -r)/build/ M=$(PWD) modules
+	make -C $(KDIR) M=`pwd`
 clean:
-	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean
+	make -C $(KDIR) M=`pwd` clean
